4371 Javadoc CompactionTaskStatusesBuilder