@@ -21,24 +21,22 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
- * This class is used to manage task status builders in a cache.
- * Tasks can be started, finished or streamed.
+ * A builder to load compaction task statuses based on events stored in the tracker. Events can be added one at a time.
+ * Once all events are in the builder, compaction task statuses can be retrieved.
  */
 public class CompactionTaskStatusesBuilder {
     private final Map<String, CompactionTaskStatus.Builder> builderById = new HashMap<>();
 
     /**
-     * This method checks for a cached CompactionTaskStatus Builder and returns it if found or creates a new one if not
-     * found.
+     * Adds an event for when a compaction task started.
      *
-     * @param  taskId     The String task Id for the task to be started.
-     * @param  startTime  The Instant time the task should be started from.
-     * @param  expiryDate The Instant Date the task should expire on.
-     * @return            CompactionTaskSatusesBuilder with the started task.
+     * @param  taskId     the ID of the task
+     * @param  startTime  the time that the task started
+     * @param  expiryDate the time the event will expire
+     * @return            this builder
      */
     public CompactionTaskStatusesBuilder taskStarted(
             String taskId, Instant startTime, Instant expiryDate) {
@@ -49,11 +47,11 @@ public class CompactionTaskStatusesBuilder {
     }
 
     /**
-     * This method finishes a task with the supplied status provided it exists in the cached map.
+     * Adds an event for when a compaction task finished.
      *
-     * @param  taskId         The String task Id of the task to be finished
-     * @param  finishedStatus The CompactionTaskFinishedStatus detailing the specific finishing status
-     * @return                CompactionTaskSatusesBuilder with the finished task.
+     * @param  taskId         the ID of the task
+     * @param  finishedStatus the status update
+     * @return                this builder
      */
     public CompactionTaskStatusesBuilder taskFinished(
             String taskId, CompactionTaskFinishedStatus finishedStatus) {
@@ -63,9 +61,10 @@ public class CompactionTaskStatusesBuilder {
     }
 
     /**
-     * This method returns a stream of the CompacionJobStatuses having been built and ordered by reversed start time.
+     * Builds compaction task statuses from the provided events, and sorts them with the most recently started task
+     * first.
      *
-     * @return Stream of CompactionTrackStatus having been built and ordered by reversed start time.
+     * @return a stream of the compaction task statuses
      */
     public Stream<CompactionTaskStatus> stream() {
         return builderById.values().stream()
@@ -73,8 +72,14 @@ public class CompactionTaskStatusesBuilder {
                 .sorted(Comparator.comparing(CompactionTaskStatus::getStartTime).reversed());
     }
 
+    /**
+     * Builds compaction task statuses from the provided events, and sorts them with the most recently started task
+     * first.
+     *
+     * @return a list of the compaction task statuses
+     */
     public List<CompactionTaskStatus> build() {
-        return stream().collect(Collectors.toList());
+        return stream().toList();
     }
 
 }
